Lyes SEFIANE - Canada | Grocery Items Management Dependencies Upgrade.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.5</version>
+        <version>3.5.3</version>
         <relativePath/>
     </parent>
     <groupId>io.github.lyes-sefiane</groupId>
@@ -25,11 +25,11 @@
 
     <developers>
         <developer>
-            <name>Lyes Sefiane</name>
+            <name>Lyes SEFIANE</name>
             <email>lyes.sefiane@gmail.com</email>
             <url>https://github.com/lyes-sefiane</url>
             <roles>
-                <role>Software Engineer 3 𓂀</role>
+                <role>Software Engineering Manager</role>
             </roles>
         </developer>
     </developers>
