--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.5.6</version>
         <relativePath/>
     </parent>
     <groupId>io.github.lyes-sefiane</groupId>
@@ -29,7 +29,7 @@
             <email>lyes.sefiane@gmail.com</email>
             <url>https://github.com/lyes-sefiane</url>
             <roles>
-                <role>Software Engineering Manager</role>
+                <role>Software Engineer 3</role>
             </roles>
         </developer>
     </developers>
@@ -43,10 +43,16 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2024.0.1</spring-cloud.version>
-        <webmvc-ui.version>2.8.8</webmvc-ui.version>
+        <webmvc-ui.version>2.8.13</webmvc-ui.version>
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
